# download-merra2

./: DOWNLOAD_MERRA2.ipynb  Download_MERRA2.ipynb  Download_Merra2.py  README.md  pyproject.toml
src/merra2_downloader/: __init__.py  cli.py  client.py  config.py  metadata.py  urls.py
